# predicting-investment-activity

./: .gitignore  README.md  docker-compose.yaml  models_comparing.ipynb  pyproject.toml
.github/workflows/: publish-docker-images.yaml  test-python-app.yaml
API/: DataBase.py  Dockerfile  README.md  RequestModels.py  main.py  pyproject.toml
API/app/: DataBase.py  DataBaseModels.py  RequestModels.py  async_load_data.py  main.py
API/app/tests/: test_available_columns.py  test_data.csv  test_district_info.py  test_districts.py  test_download_statistics.py  test_feature_graphs.py  test_feature_info.py  test_region_info.py  test_regions.py  test_statistics.py  test_years.py  testconf.py
deploy/: README.md  configure-ufw.yml  docker-compose.deploy.yaml  install-docker.yml  inventory.yml  run-docker.yml
frontend/: Dockerfile  README.md  index.html  package-lock.json
frontend/src/: App.jsx  config.js  styles.css
mlflow_logic/: mlflow_config.py  start_mlflow.ps1
model_training/: 1dcnn.ipynb  base_catboost.ipynb  base_gradboost.ipynb  base_randomforest_catboost.ipynb  base_rf.ipynb  base_xgboost.ipynb  base_xgboost_gradientboost.ipynb
nginx/: Dockerfile  nginx.conf
project_inv/: index.html
project_inv/backend/: RequestModels.py  main.py
project_inv/frontend/: .env  package.json  vite.config.js
research/mlflow_logic/: requirements.txt
research/model_training/: base_LightGBM.ipynb
researching/: README.md
researching/dataset_processing/: external_features.ipynb
researching/mlflow_logic/: all_conn_test.py
researching/model_training/: base_rf.ipynb  (+3 more)
(+16 files in other folders)
