[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.123.9",
    "pandas>=2.3.3",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.10",
]


[tool.ruff]
exclude = [
    ".venv",
    "__pycache__",
    ".ruff_cache"
]
extend-include = ["*.py"]
line-length = 120

lint.select = [
    "E",
    "F",
    "W", 
    "I", 
    "UP",
]

[tool.ruff.lint.per-file-ignores]
"app/tests/*.py" = [
    "F841",
    "F811",
    "F401"
]
